<resources>
    <string name="app_name">TV Shows App</string>
    <string name="search">Search</string>
    <string name="show_poster">Show poster</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register"><u>Register</u></string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="register_failed">Registration failed</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="rating">Rating: %.02f</string>
    <string name="status">Status: %s</string>
    <string name="language">Language: %s</string>
    <string name="officialSite">Official site: %s</string>

    <string name="empty_input">Empty input</string>
    <string name="incorrect_email_format">Incorrect email format</string>
    <string name="password_too_short">Password should contain at least %d characters</string>
    <string name="passwords_do_not_match">Input should be the same as password field</string>
    <string name="success">Success</string>
    <string name="try_again_later">Something went wrong.\n Please, try again later.</string>
</resources>
